--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,31 +1,24 @@
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
-bind -n M-h previous-window
-bind -n M-l next-window
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloading..."
 set -g base-index 1
-set -g pane-base-index 1
-set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-set-window-option -g window-status-format "#I:#{?window_name,#{window_name},     }#{window_flags}"
-bind-key k command-prompt -I "#{window_name}" "rename-window '%%'"
-set-window-option -g mode-style "fg=colour15,bg=colour8"
+set-window-option -g mode-style "fg=colour7,bg=colour3"
+bind-key , command-prompt -I "#{window_name}" "rename-window '%%'"
+set -g window-status-current-style "fg=colour6"
 set-option -g status-bg colour235
-set-option -g status-fg colour248
-set-option -g message-style "bg=black fg=brightred"
+set-option -g status-fg colour7
 set-option -g status-position top
-set-option -g status-right ' '
+set-option -g status-justify left
+set-option -g status-right ''
+set-option -g status-left-length 100
 set-option -g status-right-length 0
-set-option -g status-left-length 70
-set-option -g history-limit 5000
 set-option -g focus-events on
 set-option -g mouse on
 set-option -g detach-on-destroy off
 set-window-option -g mode-keys vi
+unbind -T copy-mode-vi MouseDragEnd1Pane # no more auto mouse selection copying
 bind-key v copy-mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-bind-key -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel
-bind-key -r f run-shell "tmux neww ~/.config/tmux/tmux-sessionizer"
-bind-key h new-session -A -s HOME
-bind-key p switch-client -p
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 set-option -g visual-bell off
 set -sg escape-time 0
