--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,22 +1,20 @@
 // -*- mode: jsonc -*-
 {
-    "spacing": 4,
     "modules-left": [
         "sway/workspaces",
         "sway/mode",
-        "sway/scratchpad",
-        "custom/media"
+        "sway/scratchpad"
     ],
     "modules-center": [
         "clock"
     ],
     "modules-right": [
 		"custom/audio_idle_inhibitor",
-		"idle_inhibitor",
+        "idle_inhibitor",
         "pulseaudio",
-        "network",
+        //"network",
         "battery",
-        "battery#bat2"
+        "tray"
     ],
 	"custom/audio_idle_inhibitor": {
 		"format": "{icon}",
@@ -30,6 +28,15 @@
 			"none": ""
 		}
 	},
+    "keyboard-state": {
+        "numlock": true,
+        "capslock": true,
+        "format": "{name} {icon}",
+        "format-icons": {
+            "locked": "",
+            "unlocked": ""
+        }
+    },
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
@@ -40,8 +47,45 @@
         "tooltip": true,
         "tooltip-format": "{app}: {title}"
     },
+    "mpd": {
+        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
+        "format-disconnected": "Disconnected ",
+        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
+        "unknown-tag": "N/A",
+        "interval": 5,
+        "consume-icons": {
+            "on": " "
+        },
+        "random-icons": {
+            "off": "<span color=\"#f53c3c\"></span> ",
+            "on": " "
+        },
+        "repeat-icons": {
+            "on": " "
+        },
+        "single-icons": {
+            "on": "1 "
+        },
+        "state-icons": {
+            "paused": "",
+            "playing": ""
+        },
+        "tooltip-format": "MPD (connected)",
+        "tooltip-format-disconnected": "MPD (disconnected)"
+    },
+    "idle_inhibitor": {
+        "format": "{icon}",
+        "format-icons": {
+            "activated": "",
+            "deactivated": ""
+        }
+    },
+    "tray": {
+        "spacing": 10
+    },
     "clock": {
 		"format": "{:%b %d %I:%M %p}",
+        "tooltip-format": "<big>{calendar}</big>"
     },
     "battery": {
         "states": {
@@ -59,24 +103,18 @@
         "bat": "BAT2"
     },
     "network": {
-        "format-wifi": "{essid} ",
-        "format-ethernet": "Wired 🖧",
-        "tooltip-format": "{ifname} via {gwaddr} 🖧",
-        "format-linked": "{ifname} (No IP) 🖧",
+        "format-wifi": "{essid} ({signalStrength}%) ",
+        "format-ethernet": "",
+        "tooltip-format": "{ifname} via {gwaddr} ",
+        "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
-    },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": ""
-        }
+        "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
-        "format": "{volume}% {icon}  {format_source}",
-        "format-bluetooth": "{volume}% {icon}  {format_source}",
-        "format-bluetooth-muted": " {icon}  {format_source}",
-        "format-muted": "{icon}X  {format_source}",
+        "format": "{volume}% {icon} {format_source}",
+        "format-bluetooth": "{volume}% {icon} {format_source}",
+        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-muted": " {format_source}",
         "format-source": "{volume}% ",
         "format-source-muted": "",
         "format-icons": {
@@ -86,7 +124,7 @@
             "phone": "",
             "portable": "",
             "car": "",
-            "default": ""
+            "default": ["", "", ""]
         },
         "on-click": "pavucontrol"
     },
@@ -100,6 +138,5 @@
         },
         "escape": true,
         "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
     }
 }
